src/test/deca/context/valid/sansObjet/declBoolInit.deca
// Description:
//   Déclaration d'un float avec son Initialisation
//
// Resultats:
//
//
// Historique:
//    cree le 13/01/2020

{
      boolean c = false;
      boolean t = true;
}
