src/test/deca/context/invalid/class/35_wrong_type.deca
// Description:
//    Déclaration d'une fonction int mais avec return boolean
//
// Resultats:
//    wrong type on return

class A {
	int a() {
		return false;
	}
}

{
}

